Add/edit modal added.

--- a/src/frontend/src/app/components/app.template.html
+++ b/src/frontend/src/app/components/app.template.html
@@ -33,6 +33,7 @@
             <a class="mdl-navigation__link side-nav" routerLink="/persons" routerLinkActive="current">Użytkownicy</a>
             <a class="mdl-navigation__link side-nav" routerLink="/units" routerLinkActive="current">Jednostki
                 organizacyjne</a>
+            <a class="mdl-navigation__link side-nav" routerLink="/permissions" routerLinkActive="current">Uprawnienia</a>
         </nav>
     </div>
     <main class="mdl-layout__content mdl-color--grey-100">
