--- a/src/frontend/src/app/components/modal/modal.style.css
+++ b/src/frontend/src/app/components/modal/modal.style.css
@@ -7,6 +7,7 @@
     height: 100%; /* Full height */
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.6);
+    transition: all 0.25s;
 }
 .modal-content {
     margin: 10% auto; /* 10% from the top and centered */
